# biped-walking-controller

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_keyboard.cpp  main_walker.cpp  main_walker_lpvDS.cpp  main_walker_old.cpp  main_walker_ros.cpp
KeyboardCommandsReader/: KeyboardCommandsReader.cpp
com-des-motion/include/: DesVelCommandThread.h  KeyboardReaderSender.h
com-des-motion/src/: KeyboardReaderSender.cpp
com-vel-cmd/include/: DesVelocityCommand.h  DesVelocityReader.h
com-vel-cmd/src/: DesVelCommandThread.cpp  DesVelocityCommand.cpp  DesVelocityReader.cpp
config/: BalanceWalkingController.ini  BalanceWalkingController_LPVDS.ini  BalanceWalkingController_ROS.ini  yarpWholeBodyInterface.ini
desired-CoM-vel-cmd/include/: DesVelocityCommandROS.h  DesVelocityCommand_lpvDS.h  KeyboardReaderSender.h
desired-CoM-vel-cmd/src/: DesVelocityCommand.cpp  DesVelocityCommandROS.cpp  DesVelocityCommand_lpvDS.cpp
include/: ArmsForceTorqueKinChain.h  ArmsForceTorqueSensorsChains.h  CommunicationControl.h  CpBalWlkCtrlThread.h  CpMath_Utilities.h  Data_logging.h  DesVelCommandThread.h  EstimatorCompensators.h  Grasping.h  InitBalWlkParameters.h  MPCOptimizer.h  OptimalFilters.h  PatternsGenerator.h  QPOasesSolver.hpp  ReferencesCompensator.h  RobotModel.h  TemplateModels.h
src/: CommunicationControl.cpp  CpBalWlkCtrlThread.cpp  Data_logging.cpp  EstimatorCompensators.cpp  Grasping.cpp  InitBalWlkParameters.cpp  MPCOptimizer.cpp  PatternsGenerator.cpp  ReferencesCompensator.cpp  RobotModel.cpp  TemplateModels.cpp
